--- a/src/app/pages/admin-page/tables/office-table/office-table.component.scss
+++ b/src/app/pages/admin-page/tables/office-table/office-table.component.scss
@@ -1,5 +1,5 @@
 @import '/src/app/styles/variables.scss';
-//TODO the styles are the same as in offer table, how to improve?
+//TODO extract styles to shared
 .table {
   position: absolute;
   top: 0;
@@ -11,7 +11,7 @@
   box-shadow: none;
 
   &__body {
-    // overflow: auto;
+    overflow: auto;
     @media screen and (max-width: $mobile) {
       flex: 1 0 1px;
     }
